turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:6: error: value >- is not a member of Int
  while(k>-20){
         ^